style.css
* {
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
}

html,
body {
  margin: 0;
  padding: 0;
}

/* Add styles here! */

html {
  font-size: 18px;
}

body {
  background-color: #999999;
}

header {
  background-color: white;
  border-bottom: 6px solid #666666;
}

.max-width-wrapper {
  max-width: 800px;
  margin: 0 auto;
}

h1,
h2,
h3 {
  margin: 0;
}

.intro-chunk {
  padding: 96px 16px 32px 16px;
  max-width: 400px;
}

.intro-chunk .title {
  font-size: 2rem;
  padding-bottom: 24px;
}

.intro-chunk p {
  font-size: 1.25rem;
}

.intro-chunk p strong {
  color: #009966;
}

main {
  margin-block-start: 96px;
}

.indented-heading {
  background-color: #ffc000;
  border-bottom: 6px solid #cc9900;
  padding: 16px 16px 16px 40px;
  margin-inline-start: -32px;
  margin-block-start: 0px;
  margin-block-end: 0px;
  width: fit-content;
}

.card {
  padding: 24px;
  margin: -24px;
  background-color: white;
  border-bottom: 6px solid #666666;
}

.card p {
  padding: 0px 8px;
}

